<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_activity"
    android:fillViewport="true"
    tools:context=".LoginSignUpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:background="@drawable/city"
            android:contentDescription="@string/empty_description"
            android:padding="10dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/empty_description"
                android:src="@drawable/travel_logo" />

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="100dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:passwordToggleDrawable="@drawable/icon_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>


                <com.dd.processbutton.FlatButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/loginButton"
                    android:textColor="@android:color/white"
                    custom:pb_colorNormal="@android:color/holo_blue_light"
                    custom:pb_colorPressed="@android:color/holo_blue_dark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:visibility="gone"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/firstNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/lastNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/emailSignUpEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:passwordToggleDrawable="@drawable/icon_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <EditText
                        android:id="@+id/passwordSignUpEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:passwordToggleDrawable="@drawable/icon_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <EditText
                        android:id="@+id/confirmPasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password_hint"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>


                <com.dd.processbutton.FlatButton
                    android:id="@+id/signUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/signUpButton"
                    android:textColor="@android:color/white"
                    custom:pb_colorNormal="@android:color/holo_blue_light"
                    custom:pb_colorPressed="@android:color/holo_blue_dark" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signUpTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/create_account_text"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/loginTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/login_text"
                    android:visibility="gone"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>